--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 
       <h1 style="float: left; font-weight: 500; margin-left: 45px;">GOOGLE</h1>
-  <a href="Iqra/form.html" id="iqra" style="margin-left: 1000px;">Sign in</a>
+  <a href="form.html" id="iqra" style="margin-left: 1000px;">Sign in</a>
     <div class="box">
         <p>Google is named after the mathematical word<b> “googol,”</b> described as the value represented by one followed by 100 zeros. 
         Google is the leading Internet search engine; its main service provides customers with
